# pgnotifier

./: LICENSE  MANIFEST.in  README.md  TODO.md  private_methods.md  pyproject.toml  setup.py
pgnotifier/: __init__.py  notify.py
