[build-system]
requires = ["setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "pgnotifier"
version = "0.0.10"
authors = [
  { name="Ben Howell", email="ben@psychstudio.com" },
]
description = "A simple little module to capture, process, and dispatch Postgresql NOTIFY streams"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
 	'pyrsistent>=0.20.0',
	'psycopg>=3.2.1',
]

[project.urls]
Homepage = "https://github.com/benhowell/pgnotifier"
README = "https://github.com/benhowell/pgnotifier/blob/main/README.md"
TODO = "https://github.com/benhowell/pgnotifier/blob/main/TODO.md"
Issues = "https://github.com/benhowell/pgnotifier/issues"

